Создано с помощью Colaboratory

--- a/2_Heat_equation.ipynb
+++ b/2_Heat_equation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "2_Heat_equation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN/AinXkG0/+ava3n+ssMXG",
+      "authorship_tag": "ABX9TyOJFObuqbc0gF9Y7d4qKvAI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 1,
       "metadata": {
         "id": "E_2z4LmYOoYW"
       },
@@ -103,7 +103,7 @@
       "metadata": {
         "id": "eWnAbNq8RteR"
       },
-      "execution_count": 17,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -137,11 +137,8 @@
         "\n",
         "    for i in range(1, len(xk)-1):\n",
         "        a[i] = tau * aa**2* sigma / h**2\n",
-        "    for i in range(1, len(xk)-1):\n",
         "        b[i] = -1 - 2 * tau * aa**2 * sigma/ h**2\n",
-        "    for i in range(1, len(xk)-1):\n",
         "        c[i] = tau * aa**2* sigma / h**2\n",
-        "    for i in range(1, len(xk)-1):\n",
         "        d[i] = - prev[i] -tau * f(xk[i], (step - 0.5)*tau) +(sigma-1)*(tau * aa**2 / h ** 2)*(prev[i+1] - 2*prev[i] + prev[i-1])\n",
         "\n",
         "    return thomas_algorithm(a,b ,c ,d ,len(xk))\n",
@@ -181,19 +178,19 @@
           "height": 701
         },
         "id": "RRvf5Z0cVqgj",
-        "outputId": "3c18db7f-03be-452c-d2dc-844b36a88e08"
+        "outputId": "50262afe-4b3a-46b5-9e01-44a2cf8a9a70"
       },
-      "execution_count": 19,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f70a51f92d0>]"
+              "[<matplotlib.lines.Line2D at 0x7f9f08ca8390>]"
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
@@ -298,19 +295,19 @@
           "height": 701
         },
         "id": "wnvg7myQVoX3",
-        "outputId": "a5686903-ebaa-462b-d576-c278235ae188"
+        "outputId": "5fa749d0-3e1c-4086-d1f1-786c1aedd16e"
       },
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f70a54c48d0>]"
+              "[<matplotlib.lines.Line2D at 0x7f9f0871b190>]"
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -387,19 +384,19 @@
           "height": 313
         },
         "id": "2-0Kl0mCejnM",
-        "outputId": "c742e958-a7e6-44b4-a482-030da08be80d"
+        "outputId": "e2722238-f24e-402f-c9ee-8d23b1cd1c67"
       },
-      "execution_count": 52,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f70a4af55d0>]"
+              "[<matplotlib.lines.Line2D at 0x7f9f086b3910>]"
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
