Создано с помощью Colaboratory

--- a/2_Heat_equation.ipynb
+++ b/2_Heat_equation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "2_Heat_equation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOJFObuqbc0gF9Y7d4qKvAI",
+      "authorship_tag": "ABX9TyNxxnUpumRDCKxg8Qlvp7bL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,7 +103,7 @@
       "metadata": {
         "id": "eWnAbNq8RteR"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -178,19 +178,19 @@
           "height": 701
         },
         "id": "RRvf5Z0cVqgj",
-        "outputId": "50262afe-4b3a-46b5-9e01-44a2cf8a9a70"
+        "outputId": "82436802-359e-4f8d-f535-beb8b7a2ca01"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f9f08ca8390>]"
+              "[<matplotlib.lines.Line2D at 0x7f9f085ffed0>]"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
@@ -257,11 +257,8 @@
         "\n",
         "    for i in range(1, len(xk) - 1):\n",
         "        a[i] = tau * aa ** 2 * sigma / h ** 2\n",
-        "    for i in range(1, len(xk) - 1):\n",
         "        b[i] = -1 - 2 * tau * aa ** 2 * sigma / h ** 2\n",
-        "    for i in range(1, len(xk) - 1):\n",
         "        c[i] = tau * aa ** 2 * sigma / h ** 2\n",
-        "    for i in range(1, len(xk) - 1):\n",
         "        d[i] = - prev[i] - tau * f(xk[i], (step - 0.5) * tau) + (sigma - 1) * (tau * aa ** 2 / h ** 2) * (prev[i + 1] - 2 * prev[i] + prev[i - 1])\n",
         "\n",
         "    return thomas_algorithm(a, b, c, d, len(xk))\n",
@@ -295,19 +292,19 @@
           "height": 701
         },
         "id": "wnvg7myQVoX3",
-        "outputId": "5fa749d0-3e1c-4086-d1f1-786c1aedd16e"
+        "outputId": "6394a89c-70de-4c73-a561-f2aa952a8b8c"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f9f0871b190>]"
+              "[<matplotlib.lines.Line2D at 0x7f9f0874add0>]"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 8
         },
         {
           "output_type": "display_data",
@@ -357,14 +354,14 @@
         "    t = hi\n",
         "    tn_h = np.arange(tmin, tmax+t, t)\n",
         "    xk_h = np.arange(xmin, xmax+hi, hi)\n",
-        "    prev_1_ = [phi(xk_h[i]) for i in range(len(xk_h))]\n",
+        "    prev1 = [phi(xk_h[i]) for i in range(len(xk_h))]\n",
         "    y_1, y_2 = np.zeros(len(xk_h)),  [0 for i in range(len(xk_h))]\n",
-        "    prev_2_ = [phi(xk_h[i]) for i in range(len(xk_h))]\n",
+        "    prev2 = [phi(xk_h[i]) for i in range(len(xk_h))]\n",
         "     \n",
         "    yreal = [u0(xk_h[k], tn_h[-1]) for k in range(len(xk_h))]\n",
         "    for i in range(1, len(tn_h)):\n",
-        "        y_1, y_2  = p1(prev_1_, t, sigma, i,  hi), p2(prev_2_, t, sigma, i,  hi)\n",
-        "        prev_1_, prev_2_  = y_1.copy(),  y_2.copy()\n",
+        "        y_1, y_2  = p1(prev1, t, sigma, i,  hi), p2(prev2, t, sigma, i,  hi)\n",
+        "        prev1, prev2  = y_1.copy(),  y_2.copy()\n",
         "         \n",
         "    error_1[j] = np.log(max([abs(y_1[j] - yreal[j]) for j in range(len(yreal))]))\n",
         "    error_2[j] = np.log(max([abs(y_2[j] - yreal[j]) for j in range(len(yreal))]))\n",
@@ -384,19 +381,19 @@
           "height": 313
         },
         "id": "2-0Kl0mCejnM",
-        "outputId": "e2722238-f24e-402f-c9ee-8d23b1cd1c67"
+        "outputId": "7ec77b18-d6b7-4e59-db7d-fcef2b118dd1"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f9f086b3910>]"
+              "[<matplotlib.lines.Line2D at 0x7f9f084980d0>]"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 10
         },
         {
           "output_type": "display_data",
